# bin_tplt

./: .clang  CMakeLists.txt  README.md
src/: main.cpp
